--- a/tutorial/ch-grammar.tex
+++ b/tutorial/ch-grammar.tex
@@ -231,7 +231,7 @@ And finally, we have the terminal symbols, identifiers, tuples and the if-then-e
     <E12> ::= \keywordbf{false} | \keywordbf{true} | <Number>
           \alt <Id> | <Id> `::' <Id>
           \alt `{' <Expr> (`,' <Expr>)* `}'
-          \alt \keywordbf{ite} `(' <Expr> `,' <Expr> `,' <Expr> `)'
+          \alt \keywordbf{if} `(' <Expr> `)' \keywordbf{then} <Expr> \keywordbf{else} <Expr>
 \end{grammar}
 
 \section{Types}
