--- a/tutorial/ch-verification.tex
+++ b/tutorial/ch-verification.tex
@@ -102,7 +102,7 @@ Let us return to the model of Example~\ref{ex:fib-model} which is reproduced as 
 
 \subsection{Embedded assume and assert statements}
 
-A second difference with between Example~\ref{ex:fib-model} and Example~\ref{ex:fib-model-v2} is on lines 12--14, 24 and 25.  Instead of using a module-level assumption declarations as in Example~\ref{ex:fib-model}, we have three embedded assumptions in the \codelike{set\_init} procedure on lines 12--14, and two embedded assertions in the \keywordbf{next} block on lines 23 and 25. A module-level assumption is assumed to hold solver at every step of execution, while an embedded assumption is assumed ``instantaneously.'' In particular, the assumptions on lines~12--14 tells the solver to assume that $\codelike{a} \leq \codelike{b}$, $\codelike{a} >= 0$ and $\codelike{b} >= 0$ at the end of the \keywordbf{set\_init} procedure. Notice that we are not assigning specific values to \codelike{a} and \codelike{b}, instead we are asking \uclid{} to consider potential values of \codelike{a} and \codelike{b} such that $\codelike{a} \leq \codelike{b}$, $\codelike{a} \geq 0$ and $\codelike{b} \geq 0$.
+A second difference with between Example~\ref{ex:fib-model} and Example~\ref{ex:fib-model-v2} is on lines 12--14, 24 and 25.  Instead of using a module-level assumption declarations as in Example~\ref{ex:fib-model}, we have three embedded assumptions in the \codelike{set\_init} procedure on lines 12--14, and two embedded assertions in the \keywordbf{next} block on lines 23 and 25. A module-level assumption is assumed to hold for the solver at every step of execution, while an embedded assumption is assumed ``instantaneously.'' In particular, the assumptions on lines~12--14 tells the solver to assume that $\codelike{a} \leq \codelike{b}$, $\codelike{a} >= 0$ and $\codelike{b} >= 0$ at the end of the \keywordbf{set\_init} procedure. Notice that we are not assigning specific values to \codelike{a} and \codelike{b}, instead we are asking \uclid{} to consider potential values of \codelike{a} and \codelike{b} such that $\codelike{a} \leq \codelike{b}$, $\codelike{a} \geq 0$ and $\codelike{b} \geq 0$.
 
 Similarly the assertions on lines 23 and 25 are evaluated at that specific location in the code. In particular the assertion on line 23 is only checked when \codelike{flag} is \codelike{true}, while the assertion one line 25 is checked when \codelike{flag} is \codelike{false}. Since \codelike{flag} is always \codelike{true} in our model, the assertion on line 25 will never fire. In contrast, note that a module-level assertion would be evaluated after the \keywordbf{init} block and after each execution of the \keywordbf{next} block.
 
