--- a/tutorial/ch-introduction.tex
+++ b/tutorial/ch-introduction.tex
@@ -67,7 +67,7 @@ More detailed instructions for installation are as follows.
 
 \uclid{} has two prerequisites. 
 \begin{enumerate}
-    \item \uclid{} requires that the Java\texttrademark{} Runtime Environment be installed on your machine. You can download the latest Java Runtime Environment for your platform from \url{https://www.java.com.com}. 
+    \item \uclid{} requires that the Java\texttrademark{} Runtime Environment be installed on your machine. You can download the latest Java Runtime Environment for your platform from \url{https://www.java.com}. 
 \item \uclid{} uses the Z3 SMT solver. You can install Z3 from: \url{https://github.com/Z3Prover/z3/releases}. Make sure the `z3' or `z3.exe' binary is in your path after Z3 installed. Also make sure, the shared libraries for libz3 and libz3java are in the dynamic library load path (\codelike{LD\_LIBRARY\_PATH} on Unix-like systems).
 \end{enumerate}
 
