--- a/tutorial/tutorial.tex
+++ b/tutorial/tutorial.tex
@@ -49,7 +49,7 @@
   sensitive = true,
   keywords={module, forall, exists, Lambda, if, else, assert, assume, havoc,
             for, range, skip, case, esac, init, next, control, function, procedure,
-            returns, call, type, var, input, output, const, property,
+            returns, call, define, type, var, input, output, const, property,
             invariant, synthesis, grammar, requires, ensures, modifies, instance, axiom, 
             enum, record, integer, boolean, true, false},
  %otherkeywords={% types
